Bug 167742 - Title bar seperator is not translatable
Summary: Title bar seperator is not translatable
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-30 15:01 UTC by Karl Ove Hufthammer
Modified: 2009-04-21 22:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Make the titlebar separator translatable, and change it to a proper en-dash (621 bytes, patch)
2008-07-30 15:03 UTC, Karl Ove Hufthammer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Karl Ove Hufthammer 2008-07-30 15:01:08 UTC
Version:            (using KDE 4.1.0)
Installed from:    Compiled From Sources

The titlebar separator (‘ - ’, separating the document and the application in the titlebar) is currently not translatable. It should be. I'll attach a patch fixing this.
Comment 1 Karl Ove Hufthammer 2008-07-30 15:03:46 UTC
Created attachment 26500 [details]
Make the titlebar separator translatable, and change it to a proper en-dash

This patch makes the titlebar separator translatable. It also changes it from a
hyphen to a real en-dash, which is the character that should be used for
English (note that it couldn't be used in KDE 3, because of lack of UTF-8
support in the English strings).
Comment 2 Karl Ove Hufthammer 2009-04-21 22:48:07 UTC
SVN commit 957338 by huftis:

Made document/application separator shown in titlebar localizable.
Also changed it from a hyphen-minus to a proper en-dash.

BUG: 167742

 M  +1 -1      kdialog.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=957338