Made document/application separator shown in titlebar localizable. Also changed it from a hyphen-minus to a proper en-dash.

BUG: 167742

svn path=/trunk/KDE/kdelibs/; revision=957338